test/Harper/Tests/Bad/ReturnStatementInsideIteratorFunction.har
generate :: Integer -> Iterator Integer;
generate n = {
  var (i :: Integer) = 0;
  while i < n {
    yield i;

    if i == 10 {
      return;
    }

    i += 1;
  }
};

main :: ();
main = ();